--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,14 +4,13 @@
     tools:context=".MainActivity"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:android.support.design="http://schemas.android.com/apk/res-auto">
 
     <include
         layout="@layout/toolbar"
         android:id="@+id/main_toolbar"/>
 
-    <ListView xmlns:android="http://schemas.android.com/apk/res/android"
+    <ListView
         android:id="@+id/list_view"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -21,7 +20,7 @@
         android:clipToPadding="false"
         android:drawSelectorOnTop="true"/>
 
-    <android.support.design.widget.FloatingActionButton
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
         android.support.design:fabSize="normal"
         android.support.design:rippleColor="@color/colorAccentRipple"
         android:layout_margin="16dp"
@@ -30,6 +29,7 @@
         android:src="@drawable/ic_add_black_24dp"
         android:layout_alignParentBottom="true"
         android:layout_centerInParent="true"
-        android:onClick="addProfile"/>
+        android:onClick="addProfile"
+        android:contentDescription="@string/add_new_profile" />
 
 </RelativeLayout>
